web/book/tests/documentation/snapshots/documentation__book__reference__syntax__s-strings__precedence-within-s-strings__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nderive {\n  gross_salary = salary + benefits,\n  daily_rate = s\"{gross_salary} / 365\"\n}\n"
---
SELECT
    *, salary + benefits AS gross_salary, salary + benefits / 365 AS daily_rate
FROM employees
